--- a/index.html
+++ b/index.html
@@ -6,103 +6,133 @@
   <title>Quiz dos Temperamentos Humanos</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
     body {
       font-family: 'Roboto', sans-serif;
-      background-color: #f4f4f4;
+      background: linear-gradient(to right, #6a11cb, #2575fc);
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      padding: 20px;
+      margin: 0;
+      color: #333;
+      padding: 10px;
+      box-sizing: border-box;
     }
     #quiz-container {
-      background-color: #fff;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      max-width: 600px;
+      background: white;
+      border-radius: 15px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+      padding: 5vw;
+      max-width: 90vw;
       width: 100%;
-      text-align: center;
+      transition: transform 0.3s ease;
+      box-sizing: border-box;
+    }
+    #quiz-container:hover {
+      transform: scale(1.02);
     }
     h1 {
-      font-size: 28px;
-      margin-bottom: 20px;
-      color: #333;
+      text-align: center;
+      color: #6a11cb;
+      font-size: clamp(1.5rem, 5vw, 2rem);
+      margin-bottom: 4vw;
     }
     #question {
-      font-size: 20px;
-      margin-bottom: 20px;
-      color: #555;
+      font-size: clamp(1rem, 3.5vw, 1.3rem);
+      margin-bottom: 5vw;
+      line-height: 1.4;
     }
     .button-container {
       display: flex;
       justify-content: center;
-      gap: 20px;
-      margin-bottom: 20px;
+      gap: 10px;
+      width: 100%;
     }
     .btn {
-      padding: 12px 24px;
-      font-size: 16px;
+      padding: clamp(8px, 2.5vw, 12px) clamp(15px, 4vw, 25px);
+      font-size: clamp(0.9rem, 3vw, 1.1rem);
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       cursor: pointer;
-      background-color: #6200ea;
-      color: #fff;
-      transition: background-color 0.3s;
+      transition: all 0.3s ease;
+      touch-action: manipulation;
     }
-    .btn:hover {
-      background-color: #3700b3;
+    #true-btn {
+      background-color: #4CAF50;
+      color: white;
     }
-    .btn:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
+    #true-btn:hover {
+      background-color: #45a049;
+      transform: translateY(-2px);
+    }
+    #false-btn {
+      background-color: #f44336;
+      color: white;
+    }
+    #false-btn:hover {
+      background-color: #da190b;
+      transform: translateY(-2px);
     }
     #feedback {
-      font-size: 18px;
-      margin-bottom: 20px;
+      margin-top: 3vw;
+      font-size: clamp(1rem, 3.2vw, 1.2rem);
       display: none;
+      text-align: center;
     }
     #next-btn {
       display: none;
+      margin: 4vw auto 0;
+      background-color: #2196F3;
+      color: white;
+      padding: clamp(8px, 2.5vw, 10px) clamp(20px, 5vw, 30px);
+    }
+    #next-btn:hover {
+      background-color: #0b7dda;
+      transform: translateY(-2px);
     }
     #score {
-      font-size: 16px;
-      color: #777;
-      margin-top: 20px;
+      text-align: center;
+      font-size: clamp(0.9rem, 2.8vw, 1.1rem);
+      margin-top: 4vw;
+      color: #555;
     }
     #result {
       display: none;
+      text-align: center;
     }
-    #result-text {
-      font-size: 20px;
-      color: #333;
-      margin-bottom: 20px;
+    #result p {
+      font-size: clamp(1rem, 3.5vw, 1.3rem);
+      margin: 2vw 0;
+    }
+    #play-again-btn {
+      background-color: #FFC107;
+      color: white;
+      margin-top: 4vw;
+      padding: clamp(8px, 2.5vw, 10px) clamp(20px, 5vw, 30px);
+    }
+    #play-again-btn:hover {
+      background-color: #e0a800;
+      transform: translateY(-2px);
     }
     .fade-in {
       animation: fadeIn 0.5s ease-in;
     }
     @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-    @media (max-width: 480px) {
-      #quiz-container {
-        padding: 20px;
+
+    /* Mobile-specific adjustments */
+    @media (max-width: 600px) {
+      .button-container {
+        flex-direction: column;
+        align-items: center;
       }
-      h1 {
-        font-size: 24px;
+      .button-container .btn {
+        width: 80%;
       }
-      #question {
-        font-size: 18px;
-      }
-      .btn {
-        padding: 10px 20px;
-        font-size: 14px;
+      #next-btn, #play-again-btn {
+        width: 80%;
       }
     }
   </style>
@@ -130,18 +160,102 @@
       { question: "Pessoas sanguinas tendem a ser otimistas e abordam a vida com entusiasmo.", correct: "T" },
       { question: "Personalidades sanguinas são tipicamente adaptáveis a novas situações.", correct: "T" },
       { question: "Indivíduos sanguinos são frequentemente muito reservados e introvertidos.", correct: "F" },
-      { question: "Pessoas fleumáticas são conhecidas por sua calma e compostura em situações difíceis.", correct: "T" },
-      { question: "Indivíduos fleumáticos tendem a ser impulsivos e agir sem pensar.", correct: "F" },
-      { question: "Personalidades coléricas são geralmente determinadas e focadas em alcançar objetivos.", correct: "T" },
-      { question: "Pessoas coléricas são conhecidas por evitar conflitos a todo custo.", correct: "F" },
-      { question: "Indivíduos melancólicos frequentemente prestam atenção aos detalhes e são perfeccionistas.", correct: "T" },
-      { question: "Personalidades melancólicas são tipicamente extrovertidas e despreocupadas.", correct: "F" },
-      // Adicione as demais 90 perguntas aqui para atingir o total de 100.
-      // As perguntas devem seguir o mesmo formato: { question: "texto", correct: "T" ou "F" }
-      // Exemplos adicionais:
-      // { question: "Pessoas sanguinas podem ter dificuldade em manter o foco por longos períodos.", correct: "T" },
-      // { question: "Indivíduos fleumáticos são frequentemente muito emotivos e expressivos.", correct: "F" },
-      // Continue até completar 100 perguntas sobre qualidades e desafios dos temperamentos.
+      { question: "Pessoas sanguinas são conhecidas por sua energia e vivacidade.", correct: "T" },
+      { question: "Indivíduos sanguinos geralmente têm facilidade em fazer amigos.", correct: "T" },
+      { question: "Personalidades sanguinas são tipicamente muito organizadas e metódicas.", correct: "F" },
+      { question: "Pessoas sanguinas são frequentemente muito expressivas e comunicativas.", correct: "T" },
+      { question: "Indivíduos sanguinos são conhecidos por sua paciência e tranquilidade.", correct: "F" },
+      { question: "Personalidades sanguinas são geralmente muito criativas e imaginativas.", correct: "T" },
+      { question: "Pessoas sanguinas podem ter dificuldade em manter o foco por longos períodos.", correct: "T" },
+      { question: "Indivíduos sanguinos frequentemente procrastinam tarefas importantes.", correct: "T" },
+      { question: "Personalidades sanguinas são tipicamente muito pontuais e organizadas.", correct: "F" },
+      { question: "Pessoas sanguinas podem ser impulsivas em suas decisões.", correct: "T" },
+      { question: "Indivíduos sanguinos são conhecidos por sua habilidade em lidar com críticas.", correct: "F" },
+      { question: "Personalidades sanguinas frequentemente evitam conflitos a todo custo.", correct: "F" },
+      { question: "Pessoas sanguinas podem ter dificuldade em cumprir prazos.", correct: "T" },
+      { question: "Indivíduos sanguinos são tipicamente muito disciplinados em suas rotinas.", correct: "F" },
+      { question: "Personalidades sanguinas frequentemente falam sem pensar nas consequências.", correct: "T" },
+      { question: "Pessoas sanguinas são conhecidas por sua habilidade em manter a calma sob pressão.", correct: "F" },
+      { question: "Indivíduos fleumáticos são conhecidos por sua calma e compostura em situações difíceis.", correct: "T" },
+      { question: "Pessoas fleumáticas tendem a ser muito pacientes e tolerantes.", correct: "T" },
+      { question: "Personalidades fleumáticas são tipicamente muito confiáveis e consistentes.", correct: "T" },
+      { question: "Indivíduos fleumáticos são frequentemente muito impulsivos e agitados.", correct: "F" },
+      { question: "Pessoas fleumáticas são conhecidas por sua habilidade em mediar conflitos.", correct: "T" },
+      { question: "Indivíduos fleumáticos geralmente preferem rotinas estáveis e previsíveis.", correct: "T" },
+      { question: "Personalidades fleumáticas são tipicamente muito extrovertidas e falantes.", correct: "F" },
+      { question: "Pessoas fleumáticas são frequentemente muito empáticas e compreensivas.", correct: "T" },
+      { question: "Indivíduos fleumáticos são conhecidos por sua habilidade em tomar decisões rápidas.", correct: "F" },
+      { question: "Personalidades fleumáticas são geralmente muito leais e dedicadas.", correct: "T" },
+      { question: "Pessoas fleumáticas podem ter dificuldade em iniciar novas tarefas.", correct: "T" },
+      { question: "Indivíduos fleumáticos frequentemente evitam assumir riscos.", correct: "T" },
+      { question: "Personalidades fleumáticas são tipicamente muito assertivas e decididas.", correct: "F" },
+      { question: "Pessoas fleumáticas podem demorar para tomar decisões importantes.", correct: "T" },
+      { question: "Indivíduos fleumáticos são conhecidos por sua habilidade em expressar emoções livremente.", correct: "F" },
+      { question: "Personalidades fleumáticas frequentemente são muito competitivas.", correct: "F" },
+      { question: "Pessoas fleumáticas podem ser muito passivas em situações de grupo.", correct: "T" },
+      { question: "Indivíduos fleumáticos são tipicamente muito motivados e ambiciosos.", correct: "F" },
+      { question: "Personalidades fleumáticas frequentemente têm dificuldade em definir metas claras.", correct: "T" },
+      { question: "Pessoas fleumáticas são conhecidas por sua habilidade em lidar com mudanças rápidas.", correct: "F" },
+      { question: "Indivíduos coléricos são frequentemente muito confiantes e assertivos.", correct: "T" },
+      { question: "Pessoas coléricas tendem a ser muito determinadas e focadas em objetivos.", correct: "T" },
+      { question: "Personalidades coléricas são tipicamente muito eficientes e organizadas.", correct: "T" },
+      { question: "Indivíduos coléricos são frequentemente muito pacientes e tolerantes.", correct: "F" },
+      { question: "Pessoas coléricas são conhecidas por sua habilidade em liderar equipes.", correct: "T" },
+      { question: "Indivíduos coléricos geralmente são muito enérgicos e proativos.", correct: "T" },
+      { question: "Personalidades coléricas são tipicamente muito sensíveis e emotivas.", correct: "F" },
+      { question: "Pessoas coléricas são frequentemente muito resilientes e persistentes.", correct: "T" },
+      { question: "Indivíduos coléricos são conhecidos por sua habilidade em trabalhar sob pressão.", correct: "T" },
+      { question: "Personalidades coléricas são geralmente muito detalhistas e meticulosas.", correct: "F" },
+      { question: "Pessoas coléricas podem ser muito controladoras em situações de grupo.", correct: "T" },
+      { question: "Indivíduos coléricos frequentemente reagem com frustração ou raiva rapidamente.", correct: "T" },
+      { question: "Personalidades coléricas são tipicamente muito pacientes com erros alheios.", correct: "F" },
+      { question: "Pessoas coléricas podem ter dificuldade em relaxar ou descansar.", correct: "T" },
+      { question: "Indivíduos coléricos são conhecidos por sua habilidade em ouvir atentamente.", correct: "F" },
+      { question: "Personalidades coléricas frequentemente são muito modestas e reservadas.", correct: "F" },
+      { question: "Pessoas coléricas podem ser excessivamente exigentes consigo mesmas e com os outros.", correct: "T" },
+      { question: "Indivíduos coléricos são tipicamente muito flexíveis e adaptáveis.", correct: "F" },
+      { question: "Personalidades coléricas frequentemente priorizam o trabalho sobre o lazer.", correct: "T" },
+      { question: "Pessoas coléricas são conhecidas por sua habilidade em manter a calma em adversidades.", correct: "F" },
+      { question: "Indivíduos melancólicos são frequentemente muito reflexivos e analíticos.", correct: "T" },
+      { question: "Pessoas melancólicas tendem a ser muito detalhistas e perfeccionistas.", correct: "T" },
+      { question: "Personalidades melancólicas são tipicamente muito criativas e artísticas.", correct: "T" },
+      { question: "Indivíduos melancólicos são frequentemente muito impulsivos e espontâneos.", correct: "F" },
+      { question: "Pessoas melancólicas são conhecidas por sua habilidade em planejar e organizar.", correct: "T" },
+      { question: "Indivíduos melancólicos geralmente são muito leais e confiáveis.", correct: "T" },
+      { question: "Personalidades melancólicas são tipicamente muito extrovertidas e sociáveis.", correct: "F" },
+      { question: "Pessoas melancólicas são frequentemente muito empáticas e sensíveis.", correct: "T" },
+      { question: "Indivíduos melancólicos são conhecidos por sua habilidade em resolver problemas complexos.", correct: "T" },
+      { question: "Personalidades melancólicas são geralmente muito adaptáveis a mudanças.", correct: "F" },
+      { question: "Pessoas melancólicas podem estabelecer padrões muito altos para si mesmas.", correct: "T" },
+      { question: "Indivíduos melancólicos frequentemente preocupam-se excessivamente com detalhes.", correct: "T" },
+      { question: "Personalidades melancólicas são tipicamente muito confiantes e seguras.", correct: "F" },
+      { question: "Pessoas melancólicas podem ter dificuldade em lidar com críticas.", correct: "T" },
+      { question: "Indivíduos melancólicos são conhecidos por sua habilidade em manter o otimismo.", correct: "F" },
+      { question: "Personalidades melancólicas frequentemente são muito impulsivas em suas ações.", correct: "F" },
+      { question: "Pessoas melancólicas podem ser excessivamente autocríticas.", correct: "T" },
+      { question: "Indivíduos melancólicos são tipicamente muito confortáveis em situações sociais.", correct: "F" },
+      { question: "Personalidades melancólicas frequentemente têm dificuldade em delegar tarefas.", correct: "T" },
+      { question: "Pessoas melancólicas são conhecidas por sua habilidade em lidar com mudanças rápidas.", correct: "F" },
+      { question: "Indivíduos sanguinos são frequentemente mais estruturados do que os melancólicos.", correct: "F" },
+      { question: "Pessoas fleumáticas são tipicamente melhores em manter a calma do que os coléricos.", correct: "T" },
+      { question: "Indivíduos coléricos são geralmente mais pacientes do que os sanguinos.", correct: "F" },
+      { question: "Personalidades melancólicas são frequentemente mais artísticas do que as fleumáticas.", correct: "T" },
+      { question: "Pessoas sanguinas são tipicamente melhores planejadores do que os melancólicos.", correct: "F" },
+      { question: "Indivíduos fleumáticos são frequentemente mais decididos do que os coléricos.", correct: "F" },
+      { question: "Pessoas coléricas são geralmente mais sensíveis do que as melancólicas.", correct: "F" },
+      { question: "Indivíduos melancólicos são frequentemente menos sociáveis do que os sanguinos.", correct: "T" },
+      { question: "Personalidades sanguinas são tipicamente mais reservadas do que as fleumáticas.", correct: "F" },
+      { question: "Pessoas fleumáticas são frequentemente mais orientadas a objetivos do que os coléricos.", correct: "F" },
+      { question: "Os quatro temperamentos originaram-se de teorias antigas de personalidade.", correct: "T" },
+      { question: "Cada temperamento tem suas próprias forças e limitações únicas.", correct: "T" },
+      { question: "Aprender sobre temperamentos pode melhorar o trabalho em equipe e a compreensão mútua.", correct: "T" },
+      { question: "A maioria das pessoas exibe traços de mais de um temperamento.", correct: "T" },
+      { question: "Os temperamentos são fixos e não podem mudar ao longo do tempo.", correct: "F" },
+      { question: "O temperamento sanguino é tradicionalmente associado ao elemento ar.", correct: "T" },
+      { question: "O temperamento fleumático é associado ao elemento água.", correct: "T" },
+      { question: "O temperamento colérico é ligado ao elemento fogo.", correct: "T" },
+      { question: "O temperamento melancólico é conectado ao elemento terra.", correct: "T" },
+      { question: "Compreender os temperamentos pode orientar escolhas de carreira e vida.", correct: "T" }
     ];
 
     function shuffle(array) {
@@ -184,11 +298,11 @@
     function checkAnswer(answer) {
       const currentQuestion = quizQuestions[currentQuestionIndex];
       if (answer === currentQuestion.correct) {
-        feedbackEl.textContent = "Correto! Boa resposta.";
+        feedbackEl.textContent = "Correto! Você está aprendendo bem sobre os temperamentos.";
         feedbackEl.style.color = '#4CAF50';
         score++;
       } else {
-        feedbackEl.textContent = `Incorreto. A resposta correta era ${currentQuestion.correct === 'T' ? 'Verdadeiro' : 'Falso'}.`;
+        feedbackEl.textContent = `Incorreto. A resposta correta era ${currentQuestion.correct === 'T' ? 'Verdadeiro' : 'Falso'}. Continue praticando!`;
         feedbackEl.style.color = '#f44336';
       }
       feedbackEl.style.display = 'block';
@@ -215,11 +329,11 @@
       const percentage = (score / totalQuestions) * 100;
       let message;
       if (percentage === 100) {
-        message = "Excelente! Você demonstrou um ótimo entendimento.";
+        message = "Excelente! Você demonstrou um ótimo entendimento dos temperamentos humanos.";
       } else if (percentage >= 70) {
-        message = "Bom trabalho! Você tem um bom conhecimento sobre o tema.";
+        message = "Bom trabalho! Você tem um bom conhecimento sobre os temperamentos.";
       } else {
-        message = "Não foi dessa vez. Continue praticando para melhorar.";
+        message = "Não foi dessa vez. Continue praticando para melhorar seu conhecimento sobre os temperamentos.";
       }
       resultTextEl.textContent = `Você acertou ${score} de ${totalQuestions} (${percentage}%). ${message}`;
       questionEl.style.display = 'none';
